gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21928b.d
version https://git-lfs.github.com/spec/v1
oid sha256:7e5d5c3ca978cd880eb1f57bc08ed7d6df47bad142097d5fb57a05e5545f4a9b
size 257
